kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
  labels:
    app: nginx-homework
spec:
  type: ClusterIP
  selector:
    app: nginx-homework-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
